# samplegame

./: .gitignore  CMakeLists.txt  README.md
assets/shader/default/: default.frag  default.vert
assets/shader/spooky/: spooky.frag  spooky.vert
include/client/: Chunk.hpp
include/client/Utils/: Constants.h
include/client/player/: Camera.h  LocalPlayer.h
include/client/renderer/: QueueFamilyIndices.h  Renderer.h  SpirvHelper.h  SwapChainSupportDetails.h  UniformBufferObject.h  Vertex.h  VertexBufferObjectData.h
include/hybrid/: Location.h  Mesh.hpp  Scene.hpp  SceneObject.hpp  ServiceLocator.h  TerrainGenerator.hpp
include/hybrid/uuid/: UUID-V4.hpp
src/client/: Chunk.cpp  main.cpp
src/client/Utils/: stb_image_impl.cpp
src/client/player/: Camera.cpp  LocalPlayer.cpp
src/client/renderer/: RendererDraw.cpp  RendererInit.cpp  SpirvHelper.cpp  UniformBufferObject.cpp  Vertex.cpp
src/hybrid/: SceneObject.cpp  ServiceLocator.cpp  TerrainGenerator.cpp
